# goodreads_utils

./: README.md
goodreads-analytics/: LICENSE  README.md  griffin_goodreads.csv  pyproject.toml
goodreads-analytics/src/goodreads_analytics/: __init__.py  goodreads_analytics.py
