[build-system]
requires = ["setuptools>75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodreads-analytics"
version = "0.1.0"
description = "A package for analyzing Goodreads export data"
readme = "README.md"
authors = [
    {name = "Griffin Ansel", email = "griffin.ansel@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["goodreads", "books", "analytics", "data analysis"]
dependencies = [
    "pandas>=2.2.3",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/gansel51/goodreads-analytics"
"Bug Tracker" = "https://github.com/gansel51/goodreads-analytics/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"